k8s/apps/bookstack/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstack
  labels:
    name: bookstack
